[project]
name = "lah"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]
[project.scripts]
my-history = 'lah.cli:cmd'

[project.urls]
Homepage = "https://github.com/lsiwh37249/lsh"
Issues = "https://github.com/lsiwh37249/lsh/issues"
