[project]
name = "lah"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "tabulate>=0.9.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.pdm.scripts]
test = "pytest"
ctest = "pytest --cov"
stest = "pytest -s"
giti = "pip install git+https://github.com/lsiwh37249/lsh.git@0.2.0/args"

[project.scripts]
my-history = 'lah.cli:cmd'

[project.urls]
Homepage = "https://github.com/lsiwh37249/lsh"
Issues = "https://github.com/lsiwh37249/lsh/issues"
